# openoptics

./: .gitignore  Dockerfile  LICENSE.md  README.md  build_from_source.md  build_image_or_from_source.md  pyproject.toml  trouble_shooting.md
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
assets/: how-to-add-new-telemetry.md  how-to-debug.md
docs/: README.md  about.rst  apis_index.rst  conf.py  contribute.rst  index.rst  installation.md  ns3-backend.md  publish2dev.sh  publish2mpi.sh  quickstart.rst  tofino-backend-internals.md  tofino-backend.md
docs/_templates/: tem_author.html
docs/apis/: backends.rst  basenetwork.rst  dashboard.rst  devicemanager.rst  routing.rst  timeflowtable.rst  topo.rst  utils.rst
docs/examples/: examples.rst
docs/examples/example_src/: add_entry.rst  connect.rst  direct_perhop.rst  hoho.rst  opera.rst  shale.rst  source_routing.rst  ta.rst  vlb.rst
docs/tutorial/: 1-get-started.md  tutorial_index.rst
docs/tutorials/: 1-get-started.md  2-connect.md  3-flow-table.md  4-time-flow-table.md  5-multi-hop-routing.md  6-traffic-aware.md  7-topology.md  8-routing.md  tutorial_index.rst
examples/: README.md  __init__.py  mininet_routing_add_entry.py  mininet_routing_direct_2nodes.py  mininet_routing_direct_next_node_source.py  mininet_routing_direct_path_with_helper_function.py  mininet_routing_direct_perhop.py  mininet_routing_direct_perhop_4nodes.py  mininet_routing_direct_source.py  mininet_routing_hoho_per_hop.py  mininet_routing_hoho_source.py  mininet_routing_opera.py  mininet_routing_vlb.py  mininet_ta.py  mininet_topo_connect.py  mininet_topo_opera.py  mininet_topo_round_robin.py  mininet_topo_shale.py  ns3_routing_direct_perhop.py  ns3_routing_direct_source.py  ns3_routing_direct_tcp_bulk.py  ns3_routing_hoho_perhop.py  ns3_routing_hoho_source.py  ns3_routing_vlb.py  ns3_routing_vlb_random.py  ns3_rtt_comparison.py  ns3_tcp_circle_long_flows.py  plot_ns3_rtt_cdf.py  routing_add_entry.py  routing_direct_2nodes.py  routing_direct_next_node_source.py  routing_direct_path_with_helper_function.py  routing_direct_perhop.py  routing_direct_perhop_4nodes.py  routing_direct_source.py  routing_hoho_per_hop.py  routing_hoho_source.py  routing_opera.py  routing_vlb.py  ta.py  (+11 more)
exercises/: 1-get-started.py  2-connect-solution.py  2-connect.py  3-time-flow-entries-solution.py  3-time-flow-entries.py  4-multi-hop-routing.py  5-per-hop-routing-solution.py  5-per-hop-routing.py  6-topologies.py  7-routings.py  8-traffic-aware.py  APIs.md  cheat-sheet.md  setup.md
openoptics/: Dashboard.py  DeviceManager.py  OpticalCLI.py  OpticalRouting.py  OpticalTopo.py  README.md  TimeFlowTable.py  Toolbox.py  __init__.py  p4_mininet.py  utils.py
openoptics/_cli/: _copy_bundle.py  clean_dashboard.py  gen_examples.py  gen_tutorials.py
openoptics/backends/: __init__.py  base.py
openoptics/backends/mininet/: __init__.py  backend.py
openoptics/backends/mininet/targets/: Makefile.am
openoptics/backends/ns3/: __init__.py  backend.py  install.py  traffic.py
openoptics/backends/ns3/src/: CMakeLists.txt
openoptics/backends/tofino/: .gitignore  apply_secrets.py  backend.py  config_4tor.toml  config_4tor_2link.toml  deploy.py  gen_config.py  secrets.local.toml.example
openoptics/backends/tofino/emulated-ocs/: Makefile  README.md  ocs.cpp  run.sh  setup_ocs.py
openoptics/backends/tofino/openoptics-tor/: Makefile  README.md  openoptics_tor.cpp  run.sh  setup_tor.py  setup_util.py
openoptics/dashboard/: __init__.py  _bootstrap.py  broker.py  config.py  events.py  init.sh  manage.py  service.py
openoptics/dashboard/collectors/: __init__.py  base.py  device_metrics.py  ns3_metrics.py  reconfig_events.py
openoptics/dashboard/dashboard/: asgi.py  settings.py  urls.py
openoptics/dashboard/dashboardapp/: __init__.py  apps.py  consumers.py  models.py  routing.py  simulate_push.py  urls.py  views.py
openoptics/dashboard/dashboardapp/migrations/: 0001_initial.py
openoptics/dashboard/dashboardapp/templates/: dashboard.html
openoptics/dashboard/storage/: repository.py  schema.sql
openoptics/dashboard/tests/: test_broker.py  test_clean_cli.py  test_device_collector.py  test_reconfig_events.py  test_repository.py  test_web_api.py
openoptics/dashboard/web/: app.py  routes.py  websocket.py
p4/ocs/: ocs.p4  ocs.p4i
p4/tor/: tor.json  tor.p4  tor.p4i
targets/optical_switch/: main.cpp  optical_switch.cpp  optical_switch.h
targets/tor_switch/: calendar_queue.h  main.cpp  tor_switch.cpp  tor_switch.h
tests/: helpers.py  ns3_helpers.py  test_backend.py  test_ns3_backend.py  test_ns3_dashboard.py  test_ns3_determinism.py  test_ns3_ocs.py  test_ns3_scenarios.py  test_ns3_source_routing.py  test_ns3_tor.py  test_ns3_traffic_generator.py  test_optical_cli.py  test_optical_routing.py  test_optical_topo.py  test_port_occupancy.py  test_time_flow_table.py  test_toolbox.py  test_topo.py  test_utils.py  tofino_4node_1link_direct_test.py  tofino_4node_1link_hoho_source_test.py  tofino_4node_1link_hoho_test.py  tofino_4node_1link_vlb_source_test.py  tofino_4node_2link_direct_test.py  tofino_4node_2link_hoho_test.py  tofino_4node_2link_swap_direct_test.py  tofino_4node_2link_vlb_source_test.py  tofino_vlb_random_rtt_analysis.py  tofino_vlb_rtt_analysis.py
tutorials/: 1-get-started.py  2-connect-solution.py  2-connect.py  3-flow-table-solution.py  3-flow-table.py  4-time-flow-table-solution.py  4-time-flow-table.py  5-multi-hop-routing-solution.py  5-multi-hop-routing.py  6-traffic-aware-1.py  6-traffic-aware-2.py  7-topologies-solution.py  7-topologies.py  8-routings-solution-2.py  8-routings-solution.py  8-routings.py  APIs.md  cheat-sheet.md  multi-hop-routing-solution.py  setup.md
tutorials/solutions/: 2-connect-solution.py  3-flow-table-solution.py  4-time-flow-table-solution.py  5-multi-hop-routing-solution.py  7-topologies-solution.py  8-routings-solution-2.py  8-routings-solution.py
(+32 files in other folders)
