[project]
name = "openoptics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://openoptics.mpi-inf.mpg.de"
Documentation = "https://openoptics.mpi-inf.mpg.de/tutorials/1-get-started.html"
Repository = "https://github.com/your-org/openoptics"

#dependencies = [
#    "django>=5.2.5",
#    "matplotlib>=3.10.5",
#    "mininet>=2.3.0.dev6",
#    "networkx>=3.5",
#    "thrift>=0.22.0",
#]

[tool.setuptools]
packages = [
    "openoptics",
    "openoptics.backends",
    "openoptics.backends.mininet",
#    "openopticslib"
]


